// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IncentiveLevelSlip /> renders correctly 1`] = `
<div
  className="sc-bcXHqe cEyHpP"
>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      <h2
        className="heading__StyledHeading-sc-1dsobun-0 hGKkcr"
        size="MEDIUM"
      >
        Incentive Warning
      </h2>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date and time: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019, 12:00 am
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Name: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        An Offender
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Number: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        ABC123
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Location: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        LEI-123
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Reason:
      <span
        className="sc-hLBbgP czhjEI"
      >
        Refused: Did not want to work
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR fPAUAi"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Raised by: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        A. Officer
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR fPAUAi"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Issued by: 
      <span
        className="sc-hLBbgP fXxVQs"
      />
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019
      </span>
    </div>
  </div>
</div>
`;

exports[`<IncentiveLevelSlip /> renders with amendments 1`] = `
<div
  className="sc-bcXHqe cEyHpP"
>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      <h2
        className="heading__StyledHeading-sc-1dsobun-0 hGKkcr"
        size="MEDIUM"
      >
        Incentive Warning
      </h2>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date and time: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019, 12:00 am
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Name: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        An Offender
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Number: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        ABC123
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Location: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        LEI-123
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Reason:
      <span
        className="sc-hLBbgP czhjEI"
      >
        Refused: Did not want to work
      </span>
      <div
        className="sc-eDvSVe kgbZYH"
      >
        Amendment: 
        <span
          className="sc-hLBbgP czhjEI"
        >
          Rescinded
        </span>
        <div>
          1 January 2019, 2:17 pm
        </div>
        <div>
          A. Amendment
        </div>
      </div>
      <div
        className="sc-eDvSVe kgbZYH"
      >
        Amendment: 
        <span
          className="sc-hLBbgP czhjEI"
        >
          Updated
        </span>
        <div>
          1 January 2019, 3:17 pm
        </div>
        <div>
          A. Author
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gswNZR fPAUAi"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Raised by: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        A. Officer
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR fPAUAi"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Issued by: 
      <span
        className="sc-hLBbgP fXxVQs"
      />
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019
      </span>
    </div>
  </div>
</div>
`;

exports[`<IncentiveLevelSlip /> renders with an activity or area 1`] = `
<div
  className="sc-bcXHqe cEyHpP"
>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      <h2
        className="heading__StyledHeading-sc-1dsobun-0 hGKkcr"
        size="MEDIUM"
      >
        Incentive Warning
      </h2>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date and time: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019, 12:00 am
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Name: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        An Offender
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Number: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        ABC123
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Location: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        LEI-123
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Activity or area: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        Gym
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Reason:
      <span
        className="sc-hLBbgP czhjEI"
      >
        Refused: Did not want to work
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR fPAUAi"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Raised by: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        A. Officer
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR fPAUAi"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Issued by: 
      <span
        className="sc-hLBbgP fXxVQs"
      />
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019
      </span>
    </div>
  </div>
</div>
`;

exports[`<IncentiveLevelSlip /> renders with an issued by name 1`] = `
<div
  className="sc-bcXHqe cEyHpP"
>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      <h2
        className="heading__StyledHeading-sc-1dsobun-0 hGKkcr"
        size="MEDIUM"
      >
        Incentive Warning
      </h2>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date and time: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019, 12:00 am
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Name: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        An Offender
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Number: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        ABC123
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Location: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        LEI-123
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Activity or area: 
      <span
        className="sc-hLBbgP czhjEI"
      >
        Gym
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR bkuEXh"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Reason:
      <span
        className="sc-hLBbgP czhjEI"
      >
        Refused: Did not want to work
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR fPAUAi"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Raised by: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        A. Officer
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019
      </span>
    </div>
  </div>
  <div
    className="sc-gswNZR fPAUAi"
  >
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Issued by: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        A. Officer
      </span>
    </div>
    <div
      className="sc-dkrFOg dFGLzW"
    >
      Date: 
      <span
        className="sc-hLBbgP fXxVQs"
      >
        1 January 2019
      </span>
    </div>
  </div>
</div>
`;
